# netops-agent

./: README.md  pyproject.toml
data/: runbooks.yaml
docs/: architecture.md
netops_agent/: __init__.py  agent.py  cli.py  db.py  models.py  rag.py  synthetic_data.py  tools.py  workflows.py
