[project]
name = "netops-agent"
version = "0.1.0"
description = "Local, open-source NetOps agentic AI demo using synthetic data"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "NetOps Agent Learner"}]
license = {text = "MIT"}

dependencies = [
  "duckdb>=0.10.0",
  "numpy>=1.26.0",
  "pandas>=2.0.0",
  "pydantic>=2.6.0",
  "pyyaml>=6.0.1",
  "scikit-learn>=1.4.0",
  "rich>=13.7.0",
]

[project.scripts]
netops-agent = "netops_agent.cli:main"

[tool.ruff]
line-length = 100
